--- a/changelog.txt
+++ b/changelog.txt
@@ -2,5 +2,5 @@
 Version: 1.0.0
 Date: ??????
   Features:
-    - Seperated Equipment hotkeys into its own mod.
+    - Seperated into its own mod.
     - Added GUI for disabled equipment.
