--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.1
+Date: ??????
+  BugFixes:
+    - Fix Player/Character rename issues.
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: ??????
   Features:
