--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: ??????
+  BugFixes:
+    - Remove Un-needed toggles for roboport and exoskeletons
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: ??????
   BugFixes:
