--- a/changelog.txt
+++ b/changelog.txt
@@ -11,12 +11,12 @@ Date: ??????
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: ??????
-  BugFixes:
+  Bugfixes:
     - Remove Un-needed toggles for roboport and exoskeletons.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: ??????
-  BugFixes:
+  Bugfixes:
     - Fix Player/Character rename issues.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
