--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 1.1.1
 Date: ????
   Changes:
+    - Deprecated this mod and moved to Picker Inventory Tools
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: ??????
