--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
-Date: ????
+Date: 2020-04-21
   Changes:
     - Deprecated this mod and moved to Picker Inventory Tools
 ---------------------------------------------------------------------------------------------------
